# mcp-pennylane-company

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  DOCKER_README.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  claude_desktop_config.json  docker-compose.yml  env.example  plan.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.mcp/: config.json
@documentation/pennylane/exports/: analytical_general_ledger.md
api_pennylane_doc/: firm-pennylane.readme.io_reference_companies-1.md  firm-pennylane.readme.io_reference_company-dms-files.md  firm-pennylane.readme.io_reference_company-fiscal-years.md  firm-pennylane.readme.io_reference_company-trial-balance-1.md  firm-pennylane.readme.io_reference_company.md  firm-pennylane.readme.io_reference_getanalyticalgeneralledgerexport-1.md  firm-pennylane.readme.io_reference_getdmsfileschanges.md  firm-pennylane.readme.io_reference_getfecexport-1.md  firm-pennylane.readme.io_reference_postanalyticalgeneralledgerexport-1.md  firm-pennylane.readme.io_reference_postfecexport-1.md  firm-pennylane.readme.io_reference_rate-limiting.md  firm-pennylane.readme.io_reference_scopes.md
documentation/: HTTP_TRANSPORT_GUIDE.md  MCP_FEATURES.md  prompt
documentation/api_pennylane_doc/v2_company_api/: getting_started.md  pennylane_api_v2_reference_full.md
documentation/api_pennylane_doc/v2_company_api/endpoint_references/: pennylane.readme.io_reference_company-fiscal-years.md  pennylane.readme.io_reference_deletecustomerinvoicematchedtransactions.md  pennylane.readme.io_reference_deletecustomerinvoices.md  pennylane.readme.io_reference_deleteledgerentrylinesunletter.md  pennylane.readme.io_reference_deletesupplierinvoicematchedtransactions.md  pennylane.readme.io_reference_exportanalyticalgeneralledger.md  pennylane.readme.io_reference_exportfec.md  pennylane.readme.io_reference_finalizecustomerinvoice.md  pennylane.readme.io_reference_getanalyticalgeneralledgerexport.md  pennylane.readme.io_reference_getbankaccount.md  pennylane.readme.io_reference_getbankaccounts.md  pennylane.readme.io_reference_getcategories.md  pennylane.readme.io_reference_getcategory.md  pennylane.readme.io_reference_getcategorygroupcategories.md  pennylane.readme.io_reference_getcategorygroups.md  (+82 more)
documentation/fastmcp/: llms-full.txt
documentation/mcp/: model-context-protocol.md
examples/: http_client_example.py  web_interface.html
pennylane_mcp_server/: .gitignore  pyproject.toml
pennylane_mcp_server/src/pennylane_mcp_server/: server.py
src/: __init__.py  config.py  mcp_instance.py  server.py
src/prompts/: __init__.py  accounting_prompts.py  analytics_prompts.py  invoice_prompts.py
src/resources/: __init__.py  company_resources.py
src/tools/: __init__.py  accounting.py  analytics.py  customers.py  files.py  invoices.py  misc.py  products.py  suppliers.py  transactions.py
src/utils/: __init__.py  api_client.py
tests/: __init__.py  test_server.py
