[project]
name = "mcp-pennylane"
version = "0.2.0"
description = "Model Context Protocol server for Pennylane accounting software"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Guillaume Sayer", email = "guillaume@catapulte.studio"},
]
maintainers = [
    {name = "Studio Catapulte", email = "guillaume@catapulte.studio"},
]
keywords = ["mcp", "pennylane", "accounting", "claude", "anthropic", "api", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/StudioCatapulte/mcp-pennylane-company"
Repository = "https://github.com/StudioCatapulte/mcp-pennylane-company"
Documentation = "https://github.com/StudioCatapulte/mcp-pennylane-company#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
